--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.3.2",
     "@nestjs/platform-express": "^10.3.2",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.1",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.2",
     "@swc/cli": "^0.3.9",
@@ -37,6 +39,7 @@
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
