--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "migration:create": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create ./src/database/migrations/Migration",
     "migration:generate": "npm run typeorm migration:generate ./src/database/migrations/Migration",
     "migration:run": "npm run typeorm  migration:run",
-    "migration:revert": "npm run typeorm migration:revert"
+    "migration:revert": "npm run typeorm migration:revert",
+    "seed": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-extension/dist/cli/index.js seed"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.2",
@@ -32,7 +33,8 @@
     "mysql2": "^3.9.2",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "typeorm-extension": "^3.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.1",
