--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "migration:generate": "npm run typeorm migration:generate ./src/database/migrations/Migration",
     "migration:run": "npm run typeorm  migration:run",
     "migration:revert": "npm run typeorm migration:revert",
-    "seed": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-extension/dist/cli/index.js seed"
+    "seed": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-extension/bin/cli.cjs seed:run  -d src/data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.2",
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^10.3.2",
     "@nestjs/typeorm": "^10.0.2",
     "class-validator": "^0.14.1",
+    "module-alias": "^2.2.3",
     "mysql2": "^3.9.2",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
@@ -45,6 +46,7 @@
     "@swc/core": "^1.4.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/module-alias": "^2.0.4",
     "@types/node": "^20.11.16",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
