--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^10.3.2",
     "@nestjs/platform-express": "^10.3.2",
     "@nestjs/typeorm": "^10.0.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "module-alias": "^2.2.3",
     "mysql2": "^3.9.2",
