--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typeorm-extension": "^3.5.0"
   },
   "devDependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/cli": "^10.3.1",
     "@nestjs/config": "^3.2.0",
     "@nestjs/schematics": "^10.1.0",
