--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.3.2",
     "@nestjs/platform-express": "^10.3.2",
+    "@nestjs/schedule": "^4.0.1",
     "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "firebase-admin": "^12.0.0",
     "module-alias": "^2.2.3",
     "mysql2": "^3.9.2",
     "reflect-metadata": "^0.2.1",
